--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@ html {
   overflow-x: hidden;
 }
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway";
   line-height: 1;
   font-weight: 400;
   color: #555;
@@ -29,56 +29,39 @@ body {
 button,
 button a {
   text-decoration: none;
+  color: black;
+}
+button a {
+  height: 20 / $width * 100vw;
+  width: 146 / $width * 100vw;
 }
 .btn {
   display: inline-block;
-  font-weight: 600;
   font-family: Raleway;
-  background-color: yellow;
-  text-decoration: none;
-  font-size: 20 / $width * 100vw;
-  font-weight: 600;
-  padding: 16 / $width * 100vw 32 / $width * 100vw;
+  background-color: #ffd401;
+  font-size: 16 / $width * 100vw;
+  font-weight: 700;
+  padding: 12 / $width * 100vw 30 / $width * 100vw;
   border-radius: 150 / $width * 100vw;
   border: none;
   cursor: pointer;
   transition: all 0.3s;
-  color: #fff;
+  text-transform: uppercase;
+
   &:link {
-    display: inline-block;
-    font-weight: 600;
-    font-family: Raleway;
-    background-color: yellow;
-    text-decoration: none;
-    font-size: 20 / $width * 100vw;
-    font-weight: 600;
-    padding: 16 / $width * 100vw 32 / $width * 100vw;
-    border-radius: 150 / $width * 100vw;
-    border: none;
     cursor: pointer;
     transition: all 0.3s;
-    color: #fff;
   }
   &:visited:not(.forms__btn) {
-    display: inline-block;
-    font-weight: 600;
-    font-family: Raleway;
-    background-color: yellow;
-    text-decoration: none;
-    font-size: 20 / $width * 100vw;
-    font-weight: 600;
-    padding: 16 / $width * 100vw 32 / $width * 100vw;
-    border-radius: 150 / $width * 100vw;
     border: none;
     cursor: pointer;
     transition: all 0.3s;
-    color: #fff;
   }
   &:hover:not(.forms__btn) {
-    background-color: rgba(9, 44, 9, 0.651);
+    background-color: rgba(81, 137, 4, 0.808);
   }
   &:active:not(.forms__btn) {
-    background-color: rgba(9, 44, 9, 0.651);
+    background-color: rgba(81, 137, 4, 0.808);
   }
 }
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -97,39 +80,63 @@ button a {
       justify-content: space-between;
       max-width: 1250 / $width * 100vw;
       margin: 0 auto;
-      color: #000;
-    }
-    &__logo {
-      text-align: center;
-      img {
-        height: 99 / $width * 100vw;
+      color: #000000;
+      &__adress,
+      &__work-time {
+        color: #000000;
+        font-size: 16 / $width * 100vw;
+        line-height: 22.4 / $width * 100vw;
       }
-      p {
-        text-transform: uppercase;
-        color: #000;
+
+      &__adress {
+        height: 44 / $width * 100vw;
+        width: 195 / $width * 100vw;
+        font-weight: 500;
+      }
+      &__work-time {
+        margin-top: 26 / $width * 100vw;
+        align-self: flex-start;
+        text-align: end;
+        height: 44 / $width * 100vw;
+        width: 179 / $width * 100vw;
+        &__telephone,
+        &__telephone a {
+          margin-top: 6 / $width * 100vw;
+          font-weight: 700;
+          font-size: 24 / $width * 100vw;
+          line-height: 28 / $width * 100vw;
+          text-decoration: none;
+          color: #000000;
+          text-align: end;
+          transition: 0.5s;
+          &:hover {
+            text-decoration: none;
+            color: #386641;
+          }
+        }
+      }
+      &__logo {
+        text-align: center;
+        img {
+          height: 99 / $width * 100vw;
+          width: 220 / $width * 100vw;
+        }
+        p {
+          margin-top: 17 / $width * 100vw;
+          height: 14 / $width * 100vw;
+          width: 296 / $width * 100vw;
+          text-transform: uppercase;
+          text-align: end;
+          color: #000000;
+          font-size: 12 / $width * 100vw;
+          line-height: 14.09 / $width * 100vw;
+          font-weight: 600;
+        }
       }
     }
-  }
-  &__adress,
-  &__work-time {
-    display: none;
-    color: #000;
   }
 }
-.telephone,
-.telephone a {
-  font-weight: 700;
-  font-size: 24 / $width * 100vw;
-  line-height: 28 / $width * 100vw;
-  text-decoration: none;
-  color: #202020;
-  text-align: end;
-  transition: 0.5s;
-  &:hover {
-    text-decoration: none;
-    color: #386641;
-  }
-}
+
 /********************************/
 ///WRAPER BOTTOM///
 
@@ -142,8 +149,7 @@ button a {
   border: 2 / $width * 100vw solid #4caf50;
   font-weight: 600;
   right: 0;
-  z-index: 1000;
-  padding: 10 / $width * 100vw 0;
+  //z-index: 1000;
   &.fixed {
     position: fixed;
     left: 0;
@@ -261,71 +267,86 @@ button a {
 .section-hero {
   max-width: 1920 / $width * 100vw;
   background-color: white;
+  color: #000000;
 }
 
 .hero {
   margin: 0 auto;
   padding: 0 auto;
-  display: grid;
-  grid-template-columns: 2fr 2.5fr;
-  gap: 96 / $width * 100vw;
-  align-items: center;
+  display: flex;
   justify-content: space-between;
   &__img-box {
     &__img {
-      width: 100%;
+      height: 600 / $width * 100vw;
+      width: 1040 / $width * 100vw;
     }
   }
   &__text-box {
+    padding: 0 auto;
     &__primary {
+      height: 118 / $width * 100vw;
+      width: 450 / $width * 100vw;
       font-weight: 800;
-      color: #333;
-      letter-spacing: -0.5 / $width * 100vw;
+      line-height: 59 / $width * 100vw;
       font-size: 50 / $width * 100vw;
-      line-height: 1.05;
-      margin-left: 350 / $width * 100vw;
+      margin-left: 365 / $width * 100vw;
       margin-top: 80 / $width * 100vw;
       margin-bottom: 20 / $width * 100vw;
     }
     &__tag-title {
+      height: 20 / $width * 100vw;
+      width: 264 / $width * 100vw;
       text-transform: uppercase;
       font-weight: 700;
       font-size: 22 / $width * 100vw;
-      line-height: 1.05;
-      margin-left: 350 / $width * 100vw;
+      line-height: 20 / $width * 100vw;
+      margin-left: 365 / $width * 100vw;
       margin-top: 20 / $width * 100vwx;
       color: #386641;
     }
     &__description {
-      margin-left: 350 / $width * 100vw;
-      font-size: 20 / $width * 100vw;
-      line-height: 1.6;
-      margin-bottom: 10 / $width * 100vw;
-      margin-top: 30 / $width * 100vwx;
+      height: 168 / $width * 100vw;
+      width: 440 / $width * 100vw;
+      margin-left: 365 / $width * 100vw;
+      margin-bottom: 33 / $width * 100vw;
+      margin-top: 30 / $width * 100vw;
+      font-size: 16 / $width * 100vw;
+      line-height: 24 / $width * 100vw;
+      font-weight: 500;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      &__paragraph {
+        span {
+          font-weight: 700;
+        }
+      }
     }
     &__btn {
-      float: right;
-      margin-right: 240 / $width * 100vw;
+      margin-left: 365 / $width * 100vw;
+      padding: 17 / $width * 100vw 40 / $width * 100vw;
     }
   }
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 /**********QUALITY****************/
-.section-mark-quality {
+.mark-quality {
   max-width: 1920 / $width * 100vw;
   height: 150 / $width * 100vw;
   padding: 0 auto;
   background-color: #dce4cc;
-}
-.mark-quality__container {
-  text-align: center;
-  &__logos {
-    display: flex;
-    justify-content: center;
-    img {
-      height: 150 / $width * 100vw;
-      width: 314 / $width * 100vw;
+  &__container {
+    text-align: center;
+    &__logos {
+      display: flex;
+      justify-content: center;
+
+      img {
+        height: 150 / $width * 100vw;
+        width: 314 / $width * 100vw;
+        margin-right: 35 / $width * 100vw;
+      }
     }
   }
 }
@@ -334,8 +355,6 @@ button a {
 /**********SERVICES ****************/
 .section-services {
   background-image: url("../images/image-services.png");
-  grid-template-rows: 0.5fr 2fr;
-  align-items: center;
 }
 .services {
   background-color: rgba(242, 248, 244, 0.884);
@@ -343,9 +362,11 @@ button a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: #000000;
     &__first {
+      height: 63 / $width * 100vw;
+      width: 330 / $width * 100vw;
       font-weight: 800;
-      color: #333;
       letter-spacing: -0.5 / $width * 100vw;
       font-size: 54 / $width * 100vw;
       line-height: 1.05;
@@ -354,62 +375,63 @@ button a {
       height: 96 / $width * 100vw;
       width: 580 / $width * 100vw;
       font-size: 16 / $width * 100vw;
-      padding-top: 89 / $width * 100vw;
+      margin-top: 89 / $width * 100vw;
       margin-bottom: 60 / $width * 100vw;
-      line-height: 1.6;
+      line-height: 24 / $width * 100vw;
       font-weight: 500;
     }
   }
   &__gallery {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 16 / $width * 100vw;
-    padding: 16 / $width * 100vw;
-    padding-left: 370 / $width * 100vw;
-    padding-right: 370 / $width * 100vw;
+    gap: 5 / $width * 100vw;
+    padding-bottom: 102 / $width * 100vw;
     &__transform {
-      //height: 260px;
-      // width: 285px;
+      height: 260px;
+      width: 285px;
       display: block;
       transition: all 0.4s;
-      &:hover {
-        transform: scale(1.05);
-      }
       &__item {
         overflow: hidden;
-
         img {
+          height: 200px;
+          width: 285px;
           display: block;
-          width: 100%;
+          transition: all 0.4s;
+        }
+        img:hover {
+          transform: scale(1.1);
         }
       }
       &__content {
         font-family: Raleway;
         color: #000;
         min-height: 60 / $width * 100vw;
-        //padding: 0 44 / $width * 100vw 0 20 / $width * 100vw;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
+        padding-left: 20 / $width * 100vw;
+        padding-right: 23 / $width * 100vw;
         transition: 0.5s;
         background-color: white;
+        transition: all 0.4s;
         &__tag {
           display: block;
+          font-family: raleway;
           font-weight: 700;
           font-size: 18 / $width * 100vw;
-          line-height: 22 / $width * 100vw;
+          line-height: 30 / $width * 100vw;
           color: #202020;
         }
-        &__images,
         img {
           height: 24px;
           width: 24px;
+          display: block;
         }
       }
     }
   }
 }
-
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 /**********VIDEO****************/
 .section-video {
@@ -440,10 +462,19 @@ button a {
           line-height: 1.6;
           margin-bottom: 20 / $width * 100vw;
           font-weight: 500;
+          span {
+            color: yellow;
+            font-weight: 900;
+            font-size: 24 / $width * 100vw;
+            text-transform: uppercase;
+            font-weight: 700;
+          }
         }
       }
       &__btn {
         margin-bottom: 90 / $width * 100vw;
+        padding: 17 / $width * 100vw 49 / $width * 100vw 17 / $width * 100vw 48 /
+          $width * 100vw;
       }
     }
     &__img-box__video-img {
@@ -463,25 +494,31 @@ button a {
     }
   }
 }
-.years {
-  color: yellow;
-  font-weight: 900;
-  font-size: 24 / $width * 100vw;
-  text-transform: uppercase;
-  font-weight: 700;
-}
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 /**********FAVORITES ****************/
 .favorites {
   background: #f5f5f5;
-  h2 {
-    font-size: 44 / $width * 100vw;
-    line-height: 52 / $width * 100vw;
-    color: #202020;
+  &__h {
     display: flex;
+    align-items: center;
     justify-content: center;
-    padding-top: 50 / $width * 100vw;
+    margin-top: 60 / $width * 100vw;
+    h2 {
+      background-color: #386641;
+      height: 52 / $width * 100vw;
+      width: 573 / $width * 100vw;
+      font-size: 44 / $width * 100vw;
+      line-height: 52 / $width * 100vw;
+      color: #202020;
+      /*display: flex;
+      flex-direction: row;
+      align-items: center;
+      align-self: flex-end;
+      justify-content: center;*/
+      //padding-top: 50 / $width * 100vw;
+    }
   }
+
   &__box {
     padding: 60 / $width * 100vw 0;
     text-align: center;
@@ -530,12 +567,8 @@ button a {
   &__btn a {
     text-decoration: none;
     padding: 0 auto;
-    margin-left: 30 / $width * 100vw;
-    margin-right: 30 / $width * 100vw;
-    margin-bottom: 10 / $width * 100vw;
-    text-align: center;
-    display: flex;
-    align-self: center;
+    margin-bottom: 25 / $width * 100vw;
+    color: black;
   }
 
   &__img {
@@ -726,18 +759,41 @@ button a {
       outline: none;
     }
     button {
-      background-color: inherit;
       text-transform: uppercase;
-      font-weight: 600;
+      background-color: inherit;
+      height: 20 / $width * 100vw;
+      width: 110 / $width * 100vw;
+    }
+  }
+  &__btn {
+    display: inline-block;
+    font-family: Raleway;
+    font-size: 16 / $width * 100vw;
+    font-weight: 700;
+    padding: 17 / $width * 100vw 60 / $width * 100vw;
+    border-radius: 140 / $width * 100vw;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s;
+    background-color: #ffd401;
+    position: absolute;
+    right: 0;
+    top: 0;
+    &:link {
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    &:visited {
       border: none;
       cursor: pointer;
       transition: all 0.3s;
     }
-  }
-  &__btn {
-    position: absolute;
-    right: 0;
-    top: 0;
+    &:hover {
+      background-color: rgba(81, 137, 4, 0.808);
+    }
+    &:active {
+      background-color: rgba(81, 137, 4, 0.808);
+    }
   }
 }
 .container-color {
