--- a/scss/main.scss
+++ b/scss/main.scss
@@ -387,15 +387,15 @@ button a {
     gap: 5 / $width * 100vw;
     padding-bottom: 102 / $width * 100vw;
     &__transform {
-      height: 260px;
-      width: 285px;
+      height: 260 / $width * 100vw;
+      width: 285 / $width * 100vw;
       display: block;
       transition: all 0.4s;
       &__item {
         overflow: hidden;
         img {
-          height: 200px;
-          width: 285px;
+          height: 200 / $width * 100vw;
+          width: 285 / $width * 100vw;
           display: block;
           transition: all 0.4s;
         }
@@ -424,8 +424,8 @@ button a {
           color: #202020;
         }
         img {
-          height: 24px;
-          width: 24px;
+          height: 24 / $width * 100vw;
+          width: 24 / $width * 100vw;
           display: block;
         }
       }
@@ -566,7 +566,7 @@ button a {
 
   &__img {
     position: absolute;
-    width: 225 / $width * 100vw;
+    width: 285 / $width * 100vw;
     bottom: 0;
     z-index: 1;
     transition: 0.7s;
@@ -678,8 +678,8 @@ button a {
 
       &__name {
         h3 {
-          margin-top: 16px;
-          margin-bottom: 7px;
+          margin-top: 16 / $width * 100vw;
+          margin-bottom: 7 / $width * 100vw;
           display: flex;
           text-align: start;
           align-items: start;
@@ -692,12 +692,12 @@ button a {
 
         &__stars {
           display: flex;
-          margin-right: 10px;
+          margin-right: 10 / $width * 100vw;
           img {
             height: 24 / $width * 100vw;
             width: 24 / $width * 100vw;
             text-align: center;
-            margin-right: 10px;
+            margin-right: 10 / $width * 100vw;
           }
         }
       }
@@ -826,7 +826,7 @@ button a {
 /**********FOOTER ****************/
 .footer {
   background: #fff;
-  margin-top: 80 / $width * 100vw;
+  margin-top: 47 / $width * 100vw;
 
   &__widgets {
     display: flex;
@@ -835,28 +835,33 @@ button a {
 
   .widget {
     &__info {
-      margin-bottom: 35 / $width * 100vw;
+      margin-bottom: 53 / $width * 100vw;
       line-height: 26 / $width * 100vw;
+      color: #000000;
 
-      h2,
       h3 {
-        margin-bottom: 15 / $width * 100vw;
+        margin-bottom: 19 / $width * 100vw;
         font-size: 16 / $width * 100vw;
         font-weight: 700;
         line-height: 19 / $width * 100vw;
         color: #386641;
-        text-transform: uppercase;
       }
 
       li {
+        font-weight: 500;
+        font-size: 16 / $width * 100vw;
         line-height: 35 / $width * 100vw;
         list-style: none;
       }
 
       p {
-        margin-bottom: 35 / $width * 100vw;
+        font-weight: 600;
+        font-size: 16 / $width * 100vw;
+        line-height: 26 / $width * 100vw;
+        margin-bottom: 20 / $width * 100vw;
         &:last-child {
           margin-bottom: 0;
+          line-height: 22 / $width * 100vw;
         }
       }
       a {
@@ -870,6 +875,21 @@ button a {
           color: #386641;
         }
       }
+      &__telephone,
+      &__telephone a {
+        margin-bottom: 10 / $width * 100vw;
+        font-weight: 700;
+        font-size: 24 / $width * 100vw;
+        line-height: 28 / $width * 100vw;
+        text-decoration: none;
+        color: #000000;
+        text-align: end;
+        transition: 0.5s;
+        &:hover {
+          text-decoration: none;
+          color: #386641;
+        }
+      }
 
       &--right {
         text-align: right;
@@ -877,16 +897,20 @@ button a {
       }
     }
     &__social-networks {
+      margin-top: 69 / $width * 100vw;
       display: flex;
       justify-content: right;
       &__ithem {
         flex-shrink: 0;
-        margin: 6 / $width * 100vw;
+        margin-right: 12 / $width * 100vw;
         width: 42 / $width * 100vw;
         height: 42 / $width * 100vw;
         border-radius: 50%;
         transition: 0.7s;
         background: #ffd401;
+        &:last-child {
+          margin-right: 0;
+        }
         &:hover {
           background: #386641;
         }
@@ -901,19 +925,23 @@ button a {
     }
   }
   &__copyright {
-    padding-top: 10 / $width * 100vw;
-    padding-bottom: 10 / $width * 100vw;
+    height: 56 / $width * 100vw;
+    //padding-top: 17 / $width * 100vw;
+    //padding-bottom: 10 / $width * 100vw;
     background: #454751;
     font-weight: 400;
     &__row {
       text-align: center;
       display: flex;
+      text-align: center;
+      flex-direction: row;
       justify-content: space-between;
       align-items: center;
     }
 
     &__text,
     &__text a {
+      margin-top: 15 / $width * 100vw;
       height: 26 / $width * 100vw;
       width: 212 / $width * 100vw;
       font-size: 14 / $width * 100vw;
@@ -927,6 +955,7 @@ button a {
 
     &__terms,
     &__terms a {
+      margin-top: 15 / $width * 100vw;
       font-size: 12 / $width * 100vw;
       line-height: 20 / $width * 100vw;
       color: #adbdcc;
