--- a/styles/main.css
+++ b/styles/main.css
@@ -367,8 +367,8 @@ button a {
   padding-bottom: 5.3125vw;
 }
 .services__gallery__transform {
-  height: 260px;
-  width: 285px;
+  height: 13.5416666667vw;
+  width: 14.84375vw;
   display: block;
   transition: all 0.4s;
 }
@@ -376,8 +376,8 @@ button a {
   overflow: hidden;
 }
 .services__gallery__transform__item img {
-  height: 200px;
-  width: 285px;
+  height: 10.4166666667vw;
+  width: 14.84375vw;
   display: block;
   transition: all 0.4s;
 }
@@ -406,8 +406,8 @@ button a {
   color: #202020;
 }
 .services__gallery__transform__content img {
-  height: 24px;
-  width: 24px;
+  height: 1.25vw;
+  width: 1.25vw;
   display: block;
 }
 
@@ -541,7 +541,7 @@ button a {
 }
 .tree__img {
   position: absolute;
-  width: 11.71875vw;
+  width: 14.84375vw;
   bottom: 0;
   z-index: 1;
   transition: 0.7s;
@@ -647,8 +647,8 @@ button a {
   height: 5.2083333333vw;
 }
 .response__hero__head__name h3 {
-  margin-top: 16px;
-  margin-bottom: 7px;
+  margin-top: 0.8333333333vw;
+  margin-bottom: 0.3645833333vw;
   display: flex;
   text-align: start;
   align-items: start;
@@ -660,13 +660,13 @@ button a {
 }
 .response__hero__head__name__stars {
   display: flex;
-  margin-right: 10px;
+  margin-right: 0.5208333333vw;
 }
 .response__hero__head__name__stars img {
   height: 1.25vw;
   width: 1.25vw;
   text-align: center;
-  margin-right: 10px;
+  margin-right: 0.5208333333vw;
 }
 .response__hero__text {
   max-width: 52.0833333333vw;
@@ -785,34 +785,39 @@ button a {
 /**********FOOTER ****************/
 .footer {
   background: #fff;
-  margin-top: 4.1666666667vw;
+  margin-top: 2.4479166667vw;
 }
 .footer__widgets {
   display: flex;
   justify-content: space-between;
 }
 .footer .widget__info {
-  margin-bottom: 1.8229166667vw;
+  margin-bottom: 2.7604166667vw;
   line-height: 1.3541666667vw;
+  color: #000000;
 }
-.footer .widget__info h2,
 .footer .widget__info h3 {
-  margin-bottom: 0.78125vw;
+  margin-bottom: 0.9895833333vw;
   font-size: 0.8333333333vw;
   font-weight: 700;
   line-height: 0.9895833333vw;
   color: #386641;
-  text-transform: uppercase;
 }
 .footer .widget__info li {
+  font-weight: 500;
+  font-size: 0.8333333333vw;
   line-height: 1.8229166667vw;
   list-style: none;
 }
 .footer .widget__info p {
-  margin-bottom: 1.8229166667vw;
+  font-weight: 600;
+  font-size: 0.8333333333vw;
+  line-height: 1.3541666667vw;
+  margin-bottom: 1.0416666667vw;
 }
 .footer .widget__info p:last-child {
   margin-bottom: 0;
+  line-height: 1.1458333333vw;
 }
 .footer .widget__info a {
   font-weight: 500;
@@ -825,22 +830,40 @@ button a {
   text-decoration: underline;
   color: #386641;
 }
+.footer .widget__info__telephone, .footer .widget__info__telephone a {
+  margin-bottom: 0.5208333333vw;
+  font-weight: 700;
+  font-size: 1.25vw;
+  line-height: 1.4583333333vw;
+  text-decoration: none;
+  color: #000000;
+  text-align: end;
+  transition: 0.5s;
+}
+.footer .widget__info__telephone:hover, .footer .widget__info__telephone a:hover {
+  text-decoration: none;
+  color: #386641;
+}
 .footer .widget__info--right {
   text-align: right;
   margin-bottom: 0;
 }
 .footer .widget__social-networks {
+  margin-top: 3.59375vw;
   display: flex;
   justify-content: right;
 }
 .footer .widget__social-networks__ithem {
   flex-shrink: 0;
-  margin: 0.3125vw;
+  margin-right: 0.625vw;
   width: 2.1875vw;
   height: 2.1875vw;
   border-radius: 50%;
   transition: 0.7s;
   background: #ffd401;
+}
+.footer .widget__social-networks__ithem:last-child {
+  margin-right: 0;
 }
 .footer .widget__social-networks__ithem:hover {
   background: #386641;
@@ -852,18 +875,20 @@ button a {
   filter: brightness(0) invert(10);
 }
 .footer__copyright {
-  padding-top: 0.5208333333vw;
-  padding-bottom: 0.5208333333vw;
+  height: 2.9166666667vw;
   background: #454751;
   font-weight: 400;
 }
 .footer__copyright__row {
   text-align: center;
   display: flex;
+  text-align: center;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 .footer__copyright__text, .footer__copyright__text a {
+  margin-top: 0.78125vw;
   height: 1.3541666667vw;
   width: 11.0416666667vw;
   font-size: 0.7291666667vw;
@@ -874,6 +899,7 @@ button a {
   color: #fff;
 }
 .footer__copyright__terms, .footer__copyright__terms a {
+  margin-top: 0.78125vw;
   font-size: 0.625vw;
   line-height: 1.0416666667vw;
   color: #adbdcc;
